# SmartContractCLI

./: .gitignore  README.md  testFile.txt
backend/: .env  Cargo.toml
backend/src/: cli.rs  errors.rs  main.rs
backend/src/routes/: health.rs  mod.rs  validate.rs
backend/src/validator/: env.rs  input.rs  mod.rs  network.rs
contracts/: InvalidContract.sol  ValidContract.sol
contracts/counter_contract/: Cargo.toml  NOTICE  counter_contract_optimized.wasm
contracts/counter_contract/.cargo/: config.toml
contracts/counter_contract/artifacts/: checksums.txt  counter_contract.wasm
contracts/counter_contract/src/: contract.rs
frontend/: global.d.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: CommandTerminal.tsx  ContractCard.tsx  Header.tsx  Providers.tsx  Sidebar.tsx
frontend/app/components/layout/: Sidebar.tsx
frontend/app/components/ui/: Button.tsx  Card.tsx
frontend/app/components/validate/: FileUploader.tsx  ValidationResult.tsx
frontend/app/context/: WalletContext.tsx
frontend/app/validate/: page.tsx
frontend/lib/: api.ts
frontend/src/: App.tsx
frontend/src/components/: Navbar.tsx
frontend/src/pages/: About.tsx
